<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8400"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Title of the application-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/crypt_message"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <!--Button for encryption-->
        <Button
            android:id="@+id/encryptButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@drawable/button_back"
            android:backgroundTint="#CF5C04"
            android:text="@string/encryption"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/decryptButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@drawable/button_back"
            android:backgroundTint="#CF5C04"
            android:text="@string/decryption"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
