<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43DA04"
    android:orientation="vertical"
    tools:context=".Decoder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <!--Textview to display title of the activity-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/decrypted"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <!--view to create margin-->
        <View
            android:id="@+id/viewVar1"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="#000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <!--enter the code to be decrypted here-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:text="@string/enter_your_text_here"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/decryptEditText"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <!--button to decrypt the code-->
            <Button
                android:id="@+id/decryptBtn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#09B104"
                android:text="@string/decrypt"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!--view to create margin-->
            <View
                android:id="@+id/viewVar2"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <!--display the decrypted text here-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:text="@string/your_decrypted_text_is_here"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/decryptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <!--button to copy the decrypted text-->
            <Button
                android:id="@+id/decryptCopyBtn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#09B104"
                android:text="@string/copy_text"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>