<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9104AA"
    android:orientation="vertical"
    tools:context=".Encoder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <!--title of the activity-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/encrypter"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <!--margin-->
            <View
                android:id="@+id/viewVar1"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:text="@string/enter_your_text_here"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--input text for encryption-->
            <EditText
                android:id="@+id/encryptEditText"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <!--start encryption-->
            <Button
                android:id="@+id/encryptBtn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:backgroundTint="#232222"
                android:text="@string/encrypt"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!--margin-->
            <View
                android:id="@+id/viewVar2"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <!--display encrypted text here-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:text="@string/your_encrypted_text_here"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/encryptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:textColor="#FAFAFA"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <!--button to copy encrypted code-->
            <Button
                android:id="@+id/encryptCopyBtn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:backgroundTint="#232222"
                android:text="@string/copy_text"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>